--- a/index.html
+++ b/index.html
@@ -573,12 +573,15 @@
           ></label>
           <label class="modal-form__field">
             Телефон*
-            <input
-              type="tel"
-              name="user-phone"
-              class="modal-form__input"
-              required
-            />
+            <span class="modal-form__field-wrapper">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-form__input"
+                required />
+              <svg width="14" height="14" class="modal-form__svg-icon">
+                <use href="./images/sprite.svg#tel"></use></svg
+            ></span>
           </label>
           <textarea
             name="user-message"
